fix: Java 21 빌드 타겟, H2 로컬 프로파일 추가, CORS 바인딩 수정, tags 범용 Text 컨버터 적용